k8s-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
    name: docker-node-api-deployment
spec:
    replicas: 2
    selector:
      matchLabels:     
        component: apitest
    template:
      metadata:         
        labels:
          component: apitest
      spec:
        containers:
          - name: docker-node-api
            image: marcelosantoro/docker-node-api:v1.0.0
            ports:
              - containerPort: 80


# Command to Apply on minikube - development only
# kubectl apply -f k8s-deployment.yml
#
