k8s-cluster-ip-services.yml
apiVersion: v1
kind: Service
metadata: 
  name: docker-node-api-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: apitest
  ports:
    - port: 3000
      targetPort: 3000


# Command to Apply on minikube - development only
# kubectl apply -f k8s-cluster-ip-services.yml 
#
