k8s-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: docker-node-api-cluster-ip-service
              servicePort: 3000

# Command to Apply on minikube - development only
# kubectl apply -f k8s-ingress.yml
#
